[package]
name = "git-config-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = "1.0"
serde_derive = "1.0"
prettytable-rs = "^0.10"
dirs = "5.0"
cliclack = "0.1.9"
tokio = { version = "1", features = ["full"] }

